# MAFcounter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  maf_counter.cpp  update_package.sh
example_files/: genome.maf  proteome.maf
src/: maf_counter_count.cpp  maf_counter_dump.cpp  maf_counter_proteomes_count.cpp  maf_counter_proteomes_dump.cpp  maf_counter_tools.cpp
